; ModuleID = '/home/carl/AnghaBench/git/vcs-svn/extr_fast_export.c_init_postimage.c'
source_filename = "/home/carl/AnghaBench/git/vcs-svn/extr_fast_export.c_init_postimage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@init_postimage.postimage_initialized = internal global i32 0, align 4
@postimage = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @init_postimage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @init_postimage() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @init_postimage.postimage_initialized, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %7

5:                                                ; preds = %0
  store i32 1, i32* @init_postimage.postimage_initialized, align 4
  %6 = call i32 @buffer_tmpfile_init(i32* @postimage)
  store i32 %6, i32* %1, align 4
  br label %7

7:                                                ; preds = %5, %4
  %8 = load i32, i32* %1, align 4
  ret i32 %8
}

declare dso_local i32 @buffer_tmpfile_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
